[gd_scene load_steps=30 format=3 uid="uid://d32go3mt62d31"]

[ext_resource type="Texture2D" uid="uid://b5tw0gu0i625b" path="res://assets/GreyboxTextures/GreyboxTextures/greybox_blue_grid.png" id="1_bcixf"]
[ext_resource type="Script" uid="uid://b7svhf7f5emr1" path="res://scenes/level/level.gd" id="1_scyvi"]
[ext_resource type="Script" uid="uid://dwchvephx0gb6" path="res://scenes/fly_mode_camera.gd" id="4_wx0nk"]
[ext_resource type="PackedScene" uid="uid://dqcgkdrx4yu5y" path="res://addons/input-overlay/overlay-widget/overlay-widget.tscn" id="5_45t5u"]
[ext_resource type="Script" uid="uid://cm6bvjjhychqi" path="res://scenes/level/player_fps.gd" id="5_scyvi"]
[ext_resource type="PackedScene" uid="uid://cnwc6idbd5no6" path="res://scenes/level/props/barrel.tscn" id="6_jwyb7"]
[ext_resource type="Script" uid="uid://cru8pmyng1url" path="res://scenes/level/crosshair.gd" id="7_wx0nk"]
[ext_resource type="PackedScene" uid="uid://dkuy060ytkcwq" path="res://assets/kenney_blaster-kit_2.1/Models/GLB format/blaster-g.glb" id="8_45t5u"]
[ext_resource type="PackedScene" uid="uid://cmpqbxl153lmv" path="res://scenes/player/weapon_view.tscn" id="9_ennbq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nbgty"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(0.4907779, 3.7397593e-05, 0.4046976, 1)
sky_curve = 0.13518769
ground_bottom_color = Color(0.11480638, 0.30095205, 0.21521029, 1)
ground_horizon_color = Color(0.40441567, 0.20576957, 0.42226323, 1)
ground_curve = 0.11313734

[sub_resource type="Sky" id="Sky_i166f"]
sky_material = SubResource("ProceduralSkyMaterial_nbgty")

[sub_resource type="Environment" id="Environment_qkmgm"]
background_mode = 2
sky = SubResource("Sky_i166f")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nbgty"]
albedo_texture = ExtResource("1_bcixf")
uv1_scale = Vector3(0.2, 0.2, 0.2)
uv1_triplanar = true

[sub_resource type="Animation" id="Animation_c67ir"]
resource_name = "toggle_doom_mode"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.26023585, -1.8626451e-09, 0.029973414)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2617296, 0)]
}

[sub_resource type="Animation" id="Animation_4dow1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dow1"]
_data = {
&"RESET": SubResource("Animation_4dow1"),
&"toggle_doom_mode": SubResource("Animation_c67ir")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ennbq"]
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, 0, 0)

[sub_resource type="Gradient" id="Gradient_ennbq"]
offsets = PackedFloat32Array(0, 0.7590909)
colors = PackedColorArray(1, 1, 0, 1, 1, 1, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jwyb7"]
gradient = SubResource("Gradient_ennbq")
fill = 2
fill_from = Vector2(0.51282054, 0.508547)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jwyb7"]
transparency = 1
albedo_color = Color(1, 1, 0, 1)
albedo_texture = SubResource("GradientTexture2D_jwyb7")
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_operator = 1
emission_texture = SubResource("GradientTexture2D_jwyb7")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_o1a5k"]
material = SubResource("StandardMaterial3D_jwyb7")
size = Vector2(0.15, 0.15)

[sub_resource type="Animation" id="Animation_fhfkp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2/BulletSpawnPoint/OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.14431114, -0.2827381, -0.34143603)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.20336512, 0.34867942, -0.032320138)]
}

[sub_resource type="Animation" id="Animation_o1a5k"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2/BulletSpawnPoint/OmniLight3D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2/BulletSpawnPoint/GPUParticles3D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"restart"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.1587578, -0.29145774, -0.3016964), Vector3(0.14431114, -0.2827381, -0.34143603)]
}

[sub_resource type="Animation" id="Animation_qox0j"]
resource_name = "toggle_weapon"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.17000002, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.14431114, -0.2827381, -0.34143603), Vector3(0.104722425, -0.18673313, -0.45690122), Vector3(0.14431114, -0.2827381, -0.34143603)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera/WeaponPivot/blaster-g2:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.17000002, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.20336512, 0.34867942, -0.032320138), Vector3(0.39207098, 0.34211627, -0.034253992), Vector3(0.20336512, 0.34867942, -0.032320138)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qox0j"]
_data = {
&"RESET": SubResource("Animation_fhfkp"),
&"shoot": SubResource("Animation_o1a5k"),
&"toggle_weapon": SubResource("Animation_qox0j")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_knrqb"]
radius = 0.2680664
height = 1.434082

[sub_resource type="Animation" id="Animation_jwyb7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.02177769, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ennbq"]
resource_name = "walk_camera_movement"
length = 0.5
loop_mode = 2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, 0, 0, -0.033698156, 0, 0, 0, 0, -0.028352138, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0.02177769, -0.25, 0, 0.16666667, 0.010679863, -0.1515689, -0.033698156, 0.028891101, 0, 0, 0, -0.028352138, 0.02198079, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5000334)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.13333334, 0.010601501, -0.06990286, -0.033698156, 0.011650478, 0, 0, 0, -0.028352138, 0.007400204, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5000334)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1a5k"]
_data = {
&"RESET": SubResource("Animation_jwyb7"),
&"walk_camera_movement": SubResource("Animation_ennbq")
}

[node name="Level" type="Node3D" node_paths=PackedStringArray("player", "free_camera", "player_camera")]
script = ExtResource("1_scyvi")
player = NodePath("PlayerFPS")
free_camera = NodePath("FreeCamera")
player_camera = NodePath("PlayerFPS/CameraPivot/PlayerCamera")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qkmgm")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
material_overlay = SubResource("StandardMaterial3D_nbgty")
use_collision = true
collision_layer = 2147483648
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4923668, -1.1072689, -5.1462765)
use_collision = true
size = Vector3(11.86805, 1, 36.731598)

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.4923668, 3.3431525, -5.1462765)
use_collision = true
size = Vector3(11.86805, 1, 36.731598)

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 0.69991267, -0.7142284, 0, 0.7142284, 0.69991267, -4.22453, -1.1072689, -23.034872)
use_collision = true
size = Vector3(16.043428, 1, 36.731598)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2330074, 3.7399602, -5.1462765)
use_collision = true
size = Vector3(0.41730118, 10.694458, 36.731598)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.573778, 3.7399602, -5.1462765)
use_collision = true
size = Vector3(0.41730118, 10.694458, 36.731598)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.785223, -0.60237074, -6.728577)
use_collision = true
size = Vector3(11.2897415, 2.0097961, 0.58759785)

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.472003, 0, -3.2813866)
radius = 0.746864

[node name="FreeCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.9981919, 0.012690758, -0.058753468, -0.0023053847, 0.9848216, 0.1735543, 0.060064223, -0.17310505, 0.98307014, -8.310061, 10.097511, 8.294793)
visible = false
script = ExtResource("4_wx0nk")

[node name="PlayerFPS" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999909, 0.0005169482, -0.013481079, -0.00080292136, 0.9997746, -0.021216158, 0.013467072, 0.021225054, 0.999684, 0, 0.392731, 0)
collision_mask = 2147483650
script = ExtResource("5_scyvi")
weapon_mode = 0
bullet_impulse = 500.0
fire_rate = 50.0
shoot_impulse = 2.0

[node name="CameraPivot" type="Node3D" parent="PlayerFPS"]
unique_name_in_owner = true

[node name="PlayerCamera" type="Camera3D" parent="PlayerFPS/CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9274321, -0.37399158, 0, 0.37399158, 0.9274321, 0, 0.02177769, 0)
current = true

[node name="WeaponPivot" type="Node3D" parent="PlayerFPS/CameraPivot/PlayerCamera"]

[node name="WeaponPivotAnimationPlayer" type="AnimationPlayer" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot"]
libraries = {
&"": SubResource("AnimationLibrary_4dow1")
}

[node name="blaster-g2" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot" instance=ExtResource("8_45t5u")]
transform = Transform3D(0.937104, 0.09933713, 0.33461627, -0.031648587, 0.9788811, -0.20196624, -0.34761223, 0.17867327, 0.92045724, 0.14431114, -0.2827381, -0.34143603)

[node name="BulletSpawnPoint" type="Marker3D" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot/blaster-g2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.4703484e-08, 0.10486241, -0.3482695)

[node name="OmniLight3D" type="OmniLight3D" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot/blaster-g2/BulletSpawnPoint"]
visible = false
light_color = Color(1, 1, 0, 1)
light_energy = 2.0

[node name="GPUParticles3D" type="GPUParticles3D" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot/blaster-g2/BulletSpawnPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005814921, 0.00065080344, -0.008583532)
emitting = false
lifetime = 0.05
one_shot = true
explosiveness = 0.78
local_coords = true
process_material = SubResource("ParticleProcessMaterial_ennbq")
draw_pass_1 = SubResource("QuadMesh_o1a5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot/blaster-g2"]
root_node = NodePath("../../../../..")
libraries = {
&"": SubResource("AnimationLibrary_qox0j")
}

[node name="HitScanRayCast" type="RayCast3D" parent="PlayerFPS/CameraPivot/PlayerCamera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -20)
collision_mask = 2147483650

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerFPS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.28295898, 0)
shape = SubResource("CapsuleShape3D_knrqb")

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="PlayerFPS"]
libraries = {
&"": SubResource("AnimationLibrary_o1a5k")
}

[node name="Props" type="Node3D" parent="."]

[node name="Barrel" parent="Props" instance=ExtResource("6_jwyb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.395432, -6.7413664)

[node name="Barrel2" parent="Props" instance=ExtResource("6_jwyb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0876429, 0.395432, -6.7413664)

[node name="Barrel3" parent="Props" instance=ExtResource("6_jwyb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.0617077, 0.395432, -6.7413664)

[node name="Barrel4" parent="Props" instance=ExtResource("6_jwyb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.395101, 0.395432, -6.7413664)

[node name="Barrel5" parent="Props" instance=ExtResource("6_jwyb7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.4606094, 0.395432, -6.7413664)

[node name="CanvasDebug" type="CanvasLayer" parent="."]

[node name="OverlayWidget" parent="CanvasDebug" instance=ExtResource("5_45t5u")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 732.0
offset_bottom = 120.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_wx0nk")
color = Color(1, 1, 1, 1)

[node name="Center" type="Control" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(0, 5, 0, 15)
width = 3.0

[node name="Line2D2" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(0, -5, 0, -15)
width = 3.0

[node name="Line2D3" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 3.0

[node name="Line2D4" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(5, 0, 15, 0)
width = 3.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="HUD/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Node3D" parent="HUD/SubViewportContainer/SubViewport" instance=ExtResource("9_ennbq")]
visible = false
